references render urls

--- a/paper.tex
+++ b/paper.tex
@@ -7,6 +7,8 @@
 \usepackage[T1]{fontenc}
 \usepackage{mathptmx}
 \usepackage{etoolbox}
+\usepackage{hyperref}
+\usepackage{url}
 
 \newcommand\yaq{\texttt{yaq}}
 
@@ -351,7 +353,6 @@ This work was supported by the National Science Foundation under grant CHE-17090
 The data that supports the findings of this study are available within the supplementary material.
 
 \section*{References}
-% all yaq,yaqc,and yaqd citations have an unfilled "()" in them...
 \nocite{*}
 \bibliography{references}
 
