--- a/references.bib
+++ b/references.bib
@@ -56,7 +56,7 @@
 @misc{AvroSpecification,
   title =        {Apache Avro Specification},
   year =         2022,
-  url =          {https://avro.apache.org/docs/1.11.1/specification/},
+  howpublished = {\url{https://avro.apache.org/docs/1.11.1/specification/}},
   note =         {Accessed: 2022-10-02}
 }
 
@@ -312,31 +312,31 @@
 @misc{pymeasure,
   title =        {{PyMeasure}},
   year =         2022,
-  url =          {https://pymeasure.readthedocs.io/},
+  howpublished = {\url{https://pymeasure.readthedocs.io/}},
   note =         {Accessed: 2022-10-02}
 }
 
 @misc{pymodbus,
   title =        {{PyModbus}},
-  url =          {https://pypi.org/project/pymodbus},
+  howpublished = {\url{https://pypi.org/project/pymodbus}},
   note =         {Accessed: 2022-11-06}
 }
 
 @misc{pyserial,
   title =        {{PySerial}},
-  url =          {https://pypi.org/project/pyserial},
+  howpublished = {\url{https://pypi.org/project/pyserial}},
   note =         {Accessed: 2022-10-02}
 }
 
 @misc{pyusb,
   title =        {{PyUSB}},
-  url =          {https://pypi.org/project/pyusb},
+  howpublished = {\url{https://pypi.org/project/pyusb}},
   note =         {Accessed: 2022-11-06}
 }
 
 @misc{pyvisa,
   title =        {{PyVISA}},
-  url =          {https://pypi.org/project/pyvisa},
+  howpublished = {\url{https://pypi.org/project/pyvisa}},
   note =         {Accessed: 2022-11-06}
 }
 
