--- a/references.bib
+++ b/references.bib
@@ -305,9 +305,21 @@
   author =       {Shkarin, Alexey},
   title =        {{pyLabLib}},
   year =         2022,
-  url =          {https://pypi.org/project/pylablib},
-  note =         {Accessed: 2022-10-02}
+  publisher =    {Zenodo},
+  doi =          {10.5281/zenodo.7324876},
 }
+
+@misc{Bogdanowicz2022,
+  author =       {Bogdanowicz, Nate and Rogers, Christopher and Weber,
+                  Sébastien and {Zakv} and Pelissier, Sylvain and
+                  Wheeler, Jonathan and {Cxz} and Marazzi, Francesco
+                  and {Eedm} and Galinskiy, Ivan},
+  title =        {Instrumental: A Python-based library for controlling lab hardware},
+  publisher =    {Zenodo},
+  year =         2022,
+  doi =          {10.5281/ZENODO.2556398},
+}
+
 
 @misc{pymeasure,
   title =        {{PyMeasure}},
