--- a/paper.tex
+++ b/paper.tex
@@ -314,7 +314,7 @@ Growing this ecosystem is a collaborative effort where many \yaq{} users create 
 For example, an existing LabVIEW project may provide additional hardware support via \yaq{}.
 In this way, a more modular instrument can be built gradually without needing to overhaul all of the software simultaneously.
 
-Open source software built by scientists often has incomplete and inadequate documentation.
+Software built by scientists often has incomplete and inadequate documentation. \cite{SegalJudith2007a}
 \yaq{} attempts to automate daemon documentation as much as possible.
 Our website, https://yaq.fyi, automatically builds generated reference pages for all known protocols.
 These pages are automatically updated when new versions are published.
