--- a/references.bib
+++ b/references.bib
@@ -1,377 +1,390 @@
 @inproceedings{AGotz1999TANGOA,
-  author =       {Chaize, J-M. and Götz, A. and Meyer, J. and Pérez,
+  author =	 {Chaize, J-M. and Götz, A. and Meyer, J. and Pérez,
                   María and Taurel, E.},
-  title =        {{TANGO} - AN OBJECT ORIENTED CONTROL SYSTEM BASED ON
+  title =	 {{TANGO} - AN OBJECT ORIENTED CONTROL SYSTEM BASED ON
                   {CORBA}},
-  year =         1999,
-  booktitle =    {ICALEPCS}
+  year =	 1999,
+  booktitle =	 {ICALEPCS}
 }
 
 @article{AllanDanielB2019a,
-  author =       {Allan, Daniel and Caswell, Thomas and Campbell,
+  author =	 {Allan, Daniel and Caswell, Thomas and Campbell,
                   Stuart and Rakitin, Maksim},
-  title =        {Bluesky's Ahead: A Multi-Facility Collaboration for
+  title =	 {Bluesky's Ahead: A Multi-Facility Collaboration for
                   an a la Carte Software Project for Data Acquisition
                   and Management},
-  journal =      {Synchrotron Radiation News},
-  publisher =    {Informa UK Limited},
-  year =         2019,
-  month =        {May},
-  number =       3,
-  volume =       32,
-  pages =        {19--22},
-  doi =          {10.1080/08940886.2019.1608121}
+  journal =	 {Synchrotron Radiation News},
+  publisher =	 {Informa UK Limited},
+  year =	 2019,
+  month =	 {May},
+  number =	 3,
+  volume =	 32,
+  pages =	 {19--22},
+  doi =		 {10.1080/08940886.2019.1608121}
 }
 
 @article{Allman_2012,
-  author =       {Allman, Eric},
-  title =        {Managing technical debt},
-  journal =      {Communications of the ACM},
-  publisher =    {Association for Computing Machinery (ACM)},
-  year =         2012,
-  month =        {may},
-  number =       5,
-  volume =       55,
-  pages =        {50--55},
-  url =          {https://doi.org/10.1145%2F2160718.2160733},
-  doi =          {10.1145/2160718.2160733}
+  author =	 {Allman, Eric},
+  title =	 {Managing technical debt},
+  journal =	 {Communications of the ACM},
+  publisher =	 {Association for Computing Machinery (ACM)},
+  year =	 2012,
+  month =	 {may},
+  number =	 5,
+  volume =	 55,
+  pages =	 {50--55},
+  url =		 {https://doi.org/10.1145%2F2160718.2160733},
+  doi =		 {10.1145/2160718.2160733}
 }
 
 @article{Arkilic_2017,
-  author =       {Arkilic, A. and Allan, D. B. and Caswell, T. A. and
+  author =	 {Arkilic, A. and Allan, D. B. and Caswell, T. A. and
                   Li, L. and Lauer, K. and Abeykoon, S.},
-  title =        {Towards Integrated Facility-Wide Data Acquisition
+  title =	 {Towards Integrated Facility-Wide Data Acquisition
                   and Analysis at NSLS-II},
-  journal =      {Synchrotron Radiation News},
-  publisher =    {Informa UK Limited},
-  year =         2017,
-  month =        {mar},
-  number =       2,
-  volume =       30,
-  pages =        {44--45},
-  url =          {https://doi.org/10.1080%2F08940886.2017.1289810},
-  doi =          {10.1080/08940886.2017.1289810}
+  journal =	 {Synchrotron Radiation News},
+  publisher =	 {Informa UK Limited},
+  year =	 2017,
+  month =	 {mar},
+  number =	 2,
+  volume =	 30,
+  pages =	 {44--45},
+  url =		 {https://doi.org/10.1080%2F08940886.2017.1289810},
+  doi =		 {10.1080/08940886.2017.1289810}
 }
 
 @misc{AvroSpecification,
-  title =        {Apache Avro Specification},
-  year =         2022,
-  howpublished = {\url{https://avro.apache.org/docs/1.11.1/specification/}},
-  note =         {Accessed: 2022-10-02}
+  title =	 {Apache Avro Specification},
+  year =	 2022,
+  howpublished =
+                  {\url{https://avro.apache.org/docs/1.11.1/specification/}},
+  note =	 {Accessed: 2022-10-02}
 }
 
 @misc{Bogdanowicz2022,
-  author =       {Bogdanowicz, Nate and Rogers, Christopher and Weber,
+  author =	 {Bogdanowicz, Nate and Rogers, Christopher and Weber,
                   Sébastien and {Zakv} and Pelissier, Sylvain and
                   Wheeler, Jonathan and {Cxz} and Marazzi, Francesco
                   and {Eedm} and Galinskiy, Ivan},
-  title =        {Instrumental: A Python-based library for controlling lab hardware},
-  publisher =    {Zenodo},
-  year =         2022,
-  doi =          {10.5281/ZENODO.2556398},
+  title =	 {Instrumental: A Python-based library for controlling
+                  lab hardware},
+  publisher =	 {Zenodo},
+  year =	 2022,
+  doi =		 {10.5281/ZENODO.2556398},
+}
+
+@misc{Bogdanowicz2022,
+  author =	 {Bogdanowicz, Nate and Rogers, Christopher and Weber,
+                  Sébastien and {Zakv} and Pelissier, Sylvain and
+                  Wheeler, Jonathan and {Cxz} and Marazzi, Francesco
+                  and {Eedm} and Galinskiy, Ivan},
+  title =	 {Instrumental: A Python-based library for controlling
+                  lab hardware},
+  publisher =	 {Zenodo},
+  year =	 2022,
+  doi =		 {10.5281/ZENODO.2556398},
 }
 
 @article{Campagnola_2014,
-  author =       {Campagnola, Luke and Kratz, Megan B. and Manis, Paul
+  author =	 {Campagnola, Luke and Kratz, Megan B. and Manis, Paul
                   B.},
-  title =        {ACQ4: an open-source software platform for data
+  title =	 {ACQ4: an open-source software platform for data
                   acquisition and analysis in neurophysiology
                   research},
-  journal =      {Frontiers in Neuroinformatics},
-  publisher =    {Frontiers Media SA},
-  year =         2014,
-  volume =       8,
-  doi =          {10.3389/fninf.2014.00003}
+  journal =	 {Frontiers in Neuroinformatics},
+  publisher =	 {Frontiers Media SA},
+  year =	 2014,
+  volume =	 8,
+  doi =		 {10.3389/fninf.2014.00003}
 }
 
 @phdthesis{CarlsonRogerJohn1988a,
-  author =       {Carlson, Roger John},
-  title =        {Quantitative Aspects of High Resolution, Fully
+  author =	 {Carlson, Roger John},
+  title =	 {Quantitative Aspects of High Resolution, Fully
                   Resonant, Four-Wave Mixing Spectroscopy For the
                   Analysis of Vibronic Mode Coupling in Molecules},
-  year =         1988,
-  school =       {University of Wisconsin-Madison}
+  year =	 1988,
+  school =	 {University of Wisconsin-Madison}
 }
 
 @article{CohenJeremy2021a,
-  author =       {Cohen, Jeremy and Katz, Daniel S. and Barker,
+  author =	 {Cohen, Jeremy and Katz, Daniel S. and Barker,
                   Michelle and Hong, Neil Chue and Haines, Robert and
                   Jay, Caroline},
-  title =        {The Four Pillars of Research Software Engineering},
-  journal =      {IEEE Software},
-  publisher =    {Institute of Electrical and Electronics Engineers
+  title =	 {The Four Pillars of Research Software Engineering},
+  journal =	 {IEEE Software},
+  publisher =	 {Institute of Electrical and Electronics Engineers
                   (IEEE)},
-  year =         2021,
-  month =        {January},
-  number =       1,
-  volume =       38,
-  pages =        {97--105},
-  doi =          {10.1109/ms.2020.2973362}
+  year =	 2021,
+  month =	 {January},
+  number =	 1,
+  volume =	 38,
+  pages =	 {97--105},
+  doi =		 {10.1109/ms.2020.2973362}
 }
 
 @article{DalesioLR1991a,
-  author =       {Dalesio, L. R. and Kraimer, M. R. and Kozubal,
+  author =	 {Dalesio, L. R. and Kraimer, M. R. and Kozubal,
                   A. J.},
-  title =        {{EPICS} Architecture},
-  journal =      {ICALEPCS},
-  year =         1991,
-  volume =       91
+  title =	 {{EPICS} Architecture},
+  journal =	 {ICALEPCS},
+  year =	 1991,
+  volume =	 91
 }
 
 @article{Giesbrecht_2022,
-  author =       {Giesbrecht, Grant and Amsellem, Ariel and Bauer,
+  author =	 {Giesbrecht, Grant and Amsellem, Ariel and Bauer,
                   Timo and Mak, Brian and Wynne, Brian and Qin, Zhihao
                   and Persaud, Arun},
-  title =        {Hardware-Control: Instrument control and automation
+  title =	 {Hardware-Control: Instrument control and automation
                   package},
-  journal =      {Journal of Open Source Software},
-  publisher =    {The Open Journal},
-  year =         2022,
-  month =        {apr},
-  number =       72,
-  volume =       7,
-  pages =        2688,
-  doi =          {10.21105/joss.02688}
+  journal =	 {Journal of Open Source Software},
+  publisher =	 {The Open Journal},
+  year =	 2022,
+  month =	 {apr},
+  number =	 72,
+  volume =	 7,
+  pages =	 2688,
+  doi =		 {10.21105/joss.02688}
 }
 
 @phdthesis{KainSchuyler2017a,
-  author =       {Kain, Schuyler},
-  title =        {Transition of Frequency-Domain Coherent
+  author =	 {Kain, Schuyler},
+  title =	 {Transition of Frequency-Domain Coherent
                   Multidimensional Spectroscopic Methods to the
                   Femtosecond Time Regime with Applications to
                   Nanoscale Semiconductors},
-  year =         2017,
-  school =       {University of Wisconsin-Madison}
+  year =	 2017,
+  school =	 {University of Wisconsin-Madison}
 }
 
 @article{Koerner_2019,
-  author =       {Koerner, Lucas},
-  title =        {Instrbuilder: A {Python} package for electrical
+  author =	 {Koerner, Lucas},
+  title =	 {Instrbuilder: A {Python} package for electrical
                   instrument control},
-  journal =      {Journal of Open Source Software},
-  publisher =    {The Open Journal},
-  year =         2019,
-  month =        {apr},
-  number =       36,
-  volume =       4,
-  pages =        1172,
-  doi =          {10.21105/joss.01172}
+  journal =	 {Journal of Open Source Software},
+  publisher =	 {The Open Journal},
+  year =	 2019,
+  month =	 {apr},
+  number =	 36,
+  volume =	 4,
+  pages =	 1172,
+  doi =		 {10.21105/joss.01172}
 }
 
 @phdthesis{MeyerKentAlbert2004b,
-  author =       {Meyer, Kent Albert},
-  title =        {Freqncy-Scanned Ultrafast Spectroscopic Techniques
+  author =	 {Meyer, Kent Albert},
+  title =	 {Freqncy-Scanned Ultrafast Spectroscopic Techniques
                   Applied to Infrared Four-Wave Mixing Spectroscopy},
-  year =         2004,
-  school =       {University of Wisconsin--Madison}
+  year =	 2004,
+  school =	 {University of Wisconsin--Madison}
 }
 
 @article{MukamelShaul2000a,
-  author =       {Mukamel, Shaul},
-  title =        {Multidimensional Femtosecond Correlation
+  author =	 {Mukamel, Shaul},
+  title =	 {Multidimensional Femtosecond Correlation
                   Spectroscopies of Electronic and Vibrational
                   Excitations},
-  journal =      {Annual Review of Physical Chemistry},
-  publisher =    {Annual Reviews},
-  year =         2000,
-  month =        {oct},
-  number =       1,
-  volume =       51,
-  pages =        {691--729},
-  url =          {https://doi.org/10.1146/annurev.physchem.51.1.691},
-  doi =          {10.1146/annurev.physchem.51.1.691}
+  journal =	 {Annual Review of Physical Chemistry},
+  publisher =	 {Annual Reviews},
+  year =	 2000,
+  month =	 {oct},
+  number =	 1,
+  volume =	 51,
+  pages =	 {691--729},
+  url =		 {https://doi.org/10.1146/annurev.physchem.51.1.691},
+  doi =		 {10.1146/annurev.physchem.51.1.691}
 }
 
 @article{NowogrodzkiAnna2019a,
-  author =       {Nowogrodzki, Anna},
-  title =        {How to support open-source software and stay sane},
-  journal =      {Nature},
-  publisher =    {Springer Science and Business Media LLC},
-  year =         2019,
-  month =        {July},
-  number =       7763,
-  volume =       571,
-  pages =        {133--134},
-  doi =          {10.1038/d41586-019-02046-0}
+  author =	 {Nowogrodzki, Anna},
+  title =	 {How to support open-source software and stay sane},
+  journal =	 {Nature},
+  publisher =	 {Springer Science and Business Media LLC},
+  year =	 2019,
+  month =	 {July},
+  number =	 7763,
+  volume =	 571,
+  pages =	 {133--134},
+  doi =		 {10.1038/d41586-019-02046-0}
 }
 
 @book{Raymond_1996,
-  author =       {Raymond, Eric S.},
-  title =        {The new hacker’s dictionary},
-  publisher =    {MIT Press},
-  year =         1996,
-  address =      {Cambridge, Mass},
-  callnumber =   {PN6231.E4 H3 1996},
-  edition =      {3rd ed},
-  isbn =         9780262181785
+  author =	 {Raymond, Eric S.},
+  title =	 {The new hacker’s dictionary},
+  publisher =	 {MIT Press},
+  year =	 1996,
+  address =	 {Cambridge, Mass},
+  callnumber =	 {PN6231.E4 H3 1996},
+  edition =	 {3rd ed},
+  isbn =	 9780262181785
 }
 
 @article{SalazarChaseA2021a,
-  author =       {Salazar, Chase A. and Thompson, Blaise J. and Knapp,
+  author =	 {Salazar, Chase A. and Thompson, Blaise J. and Knapp,
                   Spring M. M. and Myers, Steven R. and Stahl, Shannon
                   S.},
-  title =        {Multichannel gas-uptake/evolution reactor for
+  title =	 {Multichannel gas-uptake/evolution reactor for
                   monitoring liquid-phase chemical reactions},
-  journal =      {Review of Scientific Instruments},
-  publisher =    {AIP Publishing},
-  year =         2021,
-  month =        {April},
-  number =       4,
-  volume =       92,
-  pages =        044103,
-  doi =          {10.1063/5.0043007}
+  journal =	 {Review of Scientific Instruments},
+  publisher =	 {AIP Publishing},
+  year =	 2021,
+  month =	 {April},
+  number =	 4,
+  volume =	 92,
+  pages =	 044103,
+  doi =		 {10.1063/5.0043007}
 }
 
 @article{SegalJudith2005a,
-  author =       {Segal, Judith},
-  title =        {When Software Engineers Met Research Scientists: A
+  author =	 {Segal, Judith},
+  title =	 {When Software Engineers Met Research Scientists: A
                   Case Study},
-  journal =      {Empirical Software Engineering},
-  year =         2005,
-  month =        {oct},
-  number =       4,
-  volume =       10,
-  pages =        {517--536},
-  doi =          {10.1007/s10664-005-3865-y}
+  journal =	 {Empirical Software Engineering},
+  year =	 2005,
+  month =	 {oct},
+  number =	 4,
+  volume =	 10,
+  pages =	 {517--536},
+  doi =		 {10.1007/s10664-005-3865-y}
+}
+
+@inproceedings{SegalJudith2007a,
+  doi =		 {10.1109/vlhcc.2007.17},
+  year =	 2007,
+  month =	 sep,
+  publisher =	 {{IEEE}},
+  author =	 {Judith Segal},
+  title =	 {Some Problems of Professional End User Developers},
+  booktitle =	 {{IEEE} Symposium on Visual Languages and
+                  Human-Centric Computing ({VL}/{HCC} 2007)}
 }
 
 @phdthesis{SundenKyle2022,
-  author =       {Sunden, Kyle Foster},
-  title =        {yaq: Yet Another Acquisition A modular approach to
+  author =	 {Sunden, Kyle Foster},
+  title =	 {yaq: Yet Another Acquisition A modular approach to
                   spectroscopy software and instrumentation},
-  year =         2022,
-  school =       {University of Wisconsin--Madison}
+  year =	 2022,
+  school =	 {University of Wisconsin--Madison}
 }
 
 @phdthesis{ThompsonBlaiseJonathan2018a,
-  author =       {Thompson, Blaise Jonathan},
-  title =        {Development of Frequency Domain Multidimensional
+  author =	 {Thompson, Blaise Jonathan},
+  title =	 {Development of Frequency Domain Multidimensional
                   Spectroscopy with Applications in Semiconductor
                   Photophysics},
-  year =         2018,
-  school =       {University of Wisconsin--Madison}
+  year =	 2018,
+  school =	 {University of Wisconsin--Madison}
 }
 
 @article{WeberSebastien2021a,
-  author =       {Weber, S. J.},
-  title =        {{PyMoDAQ}: An open-source Python-based software for
+  author =	 {Weber, S. J.},
+  title =	 {{PyMoDAQ}: An open-source Python-based software for
                   modular data acquisition},
-  journal =      {Review of Scientific Instruments},
-  publisher =    {AIP Publishing},
-  year =         2021,
-  month =        {April},
-  number =       4,
-  volume =       92,
-  pages =        045104,
-  doi =          {10.1063/5.0032116}
+  journal =	 {Review of Scientific Instruments},
+  publisher =	 {AIP Publishing},
+  year =	 2021,
+  month =	 {April},
+  number =	 4,
+  volume =	 92,
+  pages =	 045104,
+  doi =		 {10.1063/5.0032116}
 }
 
 @article{WrightJohnCurtis2011a,
-  author =       {Wright, John C.},
-  title =        {Multiresonant Coherent Multidimensional
+  author =	 {Wright, John C.},
+  title =	 {Multiresonant Coherent Multidimensional
                   Spectroscopy},
-  journal =      {Annual Review of Physical Chemistry},
-  year =         2011,
-  month =        {may},
-  number =       1,
-  volume =       62,
-  pages =        {209--230},
-  doi =          {10.1146/annurev-physchem-032210-103551}
+  journal =	 {Annual Review of Physical Chemistry},
+  year =	 2011,
+  month =	 {may},
+  number =	 1,
+  volume =	 62,
+  pages =	 {209--230},
+  doi =		 {10.1146/annurev-physchem-032210-103551}
 }
 
 @manual{modbus,
-  title =        {MODBUS Application Protocol Specification},
-  year =         2012,
+  title =	 {MODBUS Application Protocol Specification},
+  year =	 2012,
   organization = {Modbus},
-  version =      {V1.1b3}
+  version =	 {V1.1b3}
 }
 
 @misc{nidaqmx,
-  title =        {Getting Started with {NI-DAQmx}},
-  year =         2022,
+  title =	 {Getting Started with {NI-DAQmx}},
+  year =	 2022,
   url =
                   {https://www.ni.com/en-us/support/documentation/supplemental/06/getting-started-with-ni-daqmx--main-page.html},
-  note =         {Accessed: 2022-10-02}
+  note =	 {Accessed: 2022-10-02}
 }
 
 @manual{picam,
-  title =        {PICam 5.x Programmer’s Manual},
-  year =         2021,
-  issue =        12,
+  title =	 {PICam 5.x Programmer’s Manual},
+  year =	 2021,
+  issue =	 12,
   organization = {Teledyne Princeton Instruments}
 }
 
 @misc{pylablib,
-  author =       {Shkarin, Alexey},
-  title =        {{pyLabLib}},
-  year =         2022,
-  publisher =    {Zenodo},
-  doi =          {10.5281/zenodo.7324876},
+  author =	 {Shkarin, Alexey},
+  title =	 {{pyLabLib}},
+  year =	 2022,
+  publisher =	 {Zenodo},
+  doi =		 {10.5281/zenodo.7324876},
 }
-
-@misc{Bogdanowicz2022,
-  author =       {Bogdanowicz, Nate and Rogers, Christopher and Weber,
-                  Sébastien and {Zakv} and Pelissier, Sylvain and
-                  Wheeler, Jonathan and {Cxz} and Marazzi, Francesco
-                  and {Eedm} and Galinskiy, Ivan},
-  title =        {Instrumental: A Python-based library for controlling lab hardware},
-  publisher =    {Zenodo},
-  year =         2022,
-  doi =          {10.5281/ZENODO.2556398},
-}
-
 
 @misc{pymeasure,
-  title =        {{PyMeasure}},
-  year =         2022,
+  title =	 {{PyMeasure}},
+  year =	 2022,
   howpublished = {\url{https://pymeasure.readthedocs.io/}},
-  note =         {Accessed: 2022-10-02}
+  note =	 {Accessed: 2022-10-02}
 }
 
 @misc{pymodbus,
-  title =        {{PyModbus}},
+  title =	 {{PyModbus}},
   howpublished = {\url{https://pypi.org/project/pymodbus}},
-  note =         {Accessed: 2022-11-06}
+  note =	 {Accessed: 2022-11-06}
 }
 
 @misc{pyserial,
-  title =        {{PySerial}},
+  title =	 {{PySerial}},
   howpublished = {\url{https://pypi.org/project/pyserial}},
-  note =         {Accessed: 2022-10-02}
+  note =	 {Accessed: 2022-10-02}
 }
 
 @misc{pyusb,
-  title =        {{PyUSB}},
+  title =	 {{PyUSB}},
   howpublished = {\url{https://pypi.org/project/pyusb}},
-  note =         {Accessed: 2022-11-06}
+  note =	 {Accessed: 2022-11-06}
 }
 
 @misc{pyvisa,
-  title =        {{PyVISA}},
+  title =	 {{PyVISA}},
   howpublished = {\url{https://pypi.org/project/pyvisa}},
-  note =         {Accessed: 2022-11-06}
+  note =	 {Accessed: 2022-11-06}
 }
 
 @manual{scpi,
-  title =        {Standard Commands for Programmable Instruments
+  title =	 {Standard Commands for Programmable Instruments
                   (SCPI)},
-  year =         1999,
+  year =	 1999,
   organization = {SCPI Consortium},
-  version =      {1999.0}
+  version =	 {1999.0}
 }
 
 @manual{thorlabs_apt,
-  title =        {Thorlabs Motion Controllers Host-Controller
+  title =	 {Thorlabs Motion Controllers Host-Controller
                   Communications Protocol},
-  year =         2022,
-  issue =        31,
+  year =	 2022,
+  issue =	 31,
   organization = {Thorlabs}
 }
 
 @misc{trspectrometer,
-  author =       {Tapping, Patrick},
-  title =        {{TRSpectrometer} Documentation},
-  year =         2021,
-  url =          {https://trspectrometer.readthedocs.io/en/latest/},
-  note =         {Accessed: 2022-10-02}
+  author =	 {Tapping, Patrick},
+  title =	 {{TRSpectrometer} Documentation},
+  year =	 2021,
+  url =		 {https://trspectrometer.readthedocs.io/en/latest/},
+  note =	 {Accessed: 2022-10-02}
 }
