provide hardware support

--- a/paper.tex
+++ b/paper.tex
@@ -83,7 +83,7 @@ These monolithic applications tend to be inflexible and difficult to develop.
 We have created a new network-based communication standard for scientific instrumentation, \yaq{}.
 This standard borrows the most important ideas from established projects used by large user facilities while retaining the simplicity appropriate for small research labs.
 We have built this standard to be self-describing, portable, and reusable wherever possible.
-Our primary goal has been to make an interface which simplifies orchestration software development as much as possible.
+Via the \yaq{} interface, we provide easy-to-use hardware support for scientists to use with their choice of experiment orchestration software.
 
 Here, we discuss the design of the \yaq{} standard in the context of challenges facing instrument designers.
 First, we discuss how particularly challenging hardware interfaces can become seemingly insurmountable barriers to software control.
