--- a/references.bib
+++ b/references.bib
@@ -365,6 +365,24 @@
   note =	 {Accessed: 2022-11-06}
 }
 
+@misc{yaqd_andor,
+  title =	 {{yaqd-andor}},
+  howpublished = {\url{https://pypi.org/project/yaqd-andor}},
+  note =	 {Accessed: 2023-02-05}
+}
+
+@misc{yaqd_pi,
+  title =	 {{yaqd-pi}},
+  howpublished = {\url{https://github.com/yaq-project/yaqd-pi}},
+  note =	 {Accessed: 2023-02-05}
+}
+
+@misc{tokei,
+  title =	 {{Tokei}},
+  howpublished = {\url{https://github.com/XAMPPRocky/tokei}},
+  note =	 {Accessed: 2023-02-05}
+}
+
 @manual{scpi,
   title =	 {Standard Commands for Programmable Instruments
                   (SCPI)},
